[package]
name = "traceatlas"
version = "0.0.1"
description = "TraceAtlas — Internet Path Visualizer"
authors = ["Krishnendu Ghata"]
edition = "2021"

[lib]
name = "traceatlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
